added first test block (placeholder graphics from tutorial series)

--- a/src/main/resources/Assets/milkandbread/lang/en_us.json
+++ b/src/main/resources/Assets/milkandbread/lang/en_us.json
@@ -1,5 +1,9 @@
 {
   "item.milkandbread.soybean": "Soybean",
   "item.milkandbread.soybean_seeds": "Soybean Seeds",
+  "item.milkandbread.salt": "Salt",
+
+  "block.milkandbread.halite_block": "Halite",
+
   "creativetab.cooking_tab": "Cooking"
 }
